Project

General

Profile

Actions

Bug #38746

closed

msgr2 leaking buffers

Added by Sage Weil about 5 years ago. Updated about 5 years ago.

Status:
Resolved
Priority:
Immediate
Assignee:
-
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

osds with bluestore consume too much ram (seeing 20GB on sepia)

to reproduce with vstart, watch bin/ceph daemon osd.0 dump_mempool and watch the 'bluestore_writing' counter increase as you write data into the clsuter.

in contrast, if you run vstart with --msgr1, the same workload will show bluestore_writing spike during writes but drop after, and not grow without bound.

Actions #1

Updated by Sage Weil about 5 years ago

hmm it happens on some osds but not others.

i added to rxbuf and txbuf lengths to the dout prefix and got this

2019-03-14 22:18:51.838 7ff4b27b1700 10 --2- [v2:10.3.64.23:6890/27806,v1:10.3.64.23:6891/27806] >> [v2:10.3.64.23:6804/26750,v1:10.3.64.23:6875/26750] conn(0x7ff49000e290 0x7ff49000f3b0 crc :-1 s=READY pgs=2 cs=0 l=0 rx=0 tx=0 txl=172 rxl=989040198).write_message sending 0x7ff3bc258b90 done.

the rxbuf is growing without bound, after the connection has authenticated.

Actions #2

Updated by Sage Weil about 5 years ago

  • Status changed from 12 to Resolved
Actions

Also available in: Atom PDF